samples/_failures_safe/1761266548_3792fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8675f0a2.c: In function ‘main’:
./samples/SAFE/__tmp_8675f0a2.c:156:41: error: expected ‘)’ at end of input
  156 |                     print_matrix(&result
      |                                 ~       ^
      |                                         )
./samples/SAFE/__tmp_8675f0a2.c:156:21: error: too few arguments to function ‘print_matrix’
  156 |                     print_matrix(&result
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_8675f0a2.c:60:6: note: declared here
   60 | void print_matrix(const Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_8675f0a2.c:156:21: error: expected declaration or statement at end of input
  156 |                     print_matrix(&result
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_8675f0a2.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8675f0a2.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8675f0a2.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8675f0a2.c:156:21: error: expected declaration or statement at end of input
